fix: 修复终审报告第2轮迭代全部问题（P0/P1/P2共50+项）
P0 Bug 修复（12项）：
- PredicateHelper 忽略大小写操作 NPE 防护（value=null 降级为 IS NULL）
- UpdateSpec.setExpression() 标记 forRemoval=true 并抛出 UnsupportedOperationException
- MyJpaTemplate CONTINUE 策略批量中断修复（while + shouldContinue 标志）
- IgnoreSoftDeleteAdvisor/IgnoreTenantAdvisor 使用 AnnotationUtils 修复接口注解检测
- SoftDeleteHelper.isSoftDeleted Integer 比较改用 Objects.equals()
- BaseEntity.equals() 跨子类相等性修复（getClass() == o.getClass()）
- MergeSpec 方言检测失败不再默认回退 H2，支持 myjpa-plus.dialect 手动指定
- EncryptConverter 密文长度校验（>= GCM_IV_LENGTH）
- TenantHelper.setAccessible 失败改为抛出 IllegalStateException
- MergeSpec.executeBatch() 使用 try-finally 恢复共享 entity 引用

P0 安全修复（1项）：
- EncryptConverter 密钥管理重构：PBKDF2WithHmacSHA256 密钥派生 + 密钥缓存 + 多版本密钥支持

P1 优化（18项）：
- EntityClassResolver 支持 @EmbeddedId 复合主键检测
- ProjectionSpec 添加 groupBy()/having() 方法
- JoinGroup 添加 fetchJoin()/leftFetchJoin() 方法
- AbstractBulkOperationSpec 添加 isEmpty()/isNotEmpty() 集合条件
- CodeEnumType Long.class 映射改为 Types.BIGINT
- MergeSpec.camelToSnake 连续大写字母处理修复（XMLParser -> xml_parser）
- SqlSlowQueryInterceptor 改用 System.nanoTime() 计时
- AuditEntityListener 跳过 BaseEntity 已处理的审计字段
- SoftDeleteJpaRepository.findById 使用 EntityManager.find() 利用 L1 缓存
- OptimisticLockRetryAdvisor 退避添加随机 jitter 防惊群
- MergeSpec 表名解析支持 schema/catalog
- MaskSerializer 使用 codePointCount/codePointAt 支持 Unicode surrogate pair

P2 优化（10项）：
- MyJpaTemplate 添加 execute(MergeSpec) 方法
- SubQuerySpec 添加 containsIgnoreCase() 替代 likeIgnoreCase()
- QueryCacheManager 添加 evictByPrefix() 批量驱逐
- EntityGraphHelper 添加 clear()/remove() 方法
- MaskType 枚举扩展（BANK_CARD/ADDRESS/LICENSE_PLATE）
- ProjectionSpec 添加 getResultStream() 流式查询
- AuditEntityListener 添加 destroy() 清理静态引用

验证结果：853 测试通过，SpotBugs 0 错误，JaCoCo 覆盖率达标