@@ -77,12 +77,15 @@ public final class TenantHelper {
                     try {
                         field.setAccessible(true);
                     } catch (SecurityException e) {
-                        log.warn(
-                            "Cannot set accessible on field '{}' in {}. "
+                        log.error(
+                            "Cannot set accessible on tenant field '{}' in {}. "
+                                + "Multi-tenant filtering will NOT work correctly. "
                                 + "If using Java 17+ module system, add JVM argument: "
                                 + "--add-opens java.base/java.lang.reflect=ALL-UNNAMED",
                             field.getName(), cls.getSimpleName());
-                        return NO_FIELD_SENTINEL;
+                        throw new IllegalStateException("Cannot access @TenantId field '" + field.getName() + "' in "
+                            + cls.getSimpleName() + ". Multi-tenant filtering requires field access. "
+                            + "Add JVM argument: --add-opens java.base/java.lang.reflect=ALL-UNNAMED", e);
                     }
                     return field.getName();
                 }
